pages/static/pages/base.css
/* Fonts */
@font-face {
  font-family: "Audrey";
  font-weight: normal;
  font-style: normal;
  src: url("../fonts/Audrey-Normal.otf") format("opentype");
}

@font-face {
  font-family: "Coco";
  font-weight: normal;
  font-style: Condensed;
  src: url("../fonts/Coco.otf") format("opentype");
}

@font-face {
  font-family: "GT Sectra Fine";
  src: url("../fonts/GT-Sectra-Fine-Book.woff") format("woff");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "GT Sectra Fine";
  src: url("../fonts/GT-Sectra-Fine-Book-Italic.woff") format("woff");
  font-weight: 400;
  font-style: italic;
}

@font-face {
  font-family: "Lemon Milk";
  src: url("../fonts/LEMONMILK-Regular.otf") format("opentype");
  font-weight: 800;
}

@font-face {
  font-family: "Lemon Milk";
  src: url("../fonts/LEMONMILK-Light.otf") format("opentype");
  font-weight: 400;
}

@font-face {
  font-family: "CustomY78";
  src: url("../fonts/CustomY78.woff") format("woff");
  font-style: normal;
  font-weight: normal;
}

/* Global style */
body {
  min-height: 100vh;
  background-color: white;
  margin: 0px;
}

*::selection {
  background-color: red;
}

/* The following is related to links */
a:link, a:visited {
  text-decoration: none;
  color: inherit;
  padding: 0;
  margin: 0;
}

a:hover {
  color: inherit;
}

a:active {
  color: inherit;
}

a {
  transition: color 0.2s ease-in;
}

/* The following is related to the nav bar and footer */
nav, 
footer {
  font-size: 13px;
  text-transform: uppercase;
  font-weight: 600;
  text-align: center;
  color: #000000cf;
  background: none;
  display: flex;
  align-items: center;
  justify-content: center;
}

nav {
  position: sticky;
  top: 0;
  font-family: "Audrey", "Lemon Milk", "CustomY78";
  height: 5vh;
  padding: 0 5%;
  background: white;
  transition: top 0.3s;
}

footer {
  font-family: "GT Sectra Fine";
  font-weight: 900;
  height: 10vh;
  padding: 0 25%;
  background: #eee;
}

nav ul,
footer ul {
  margin-left: auto;
}

ul {
  display: flex;
  list-style-type: none;
}

li.menu {
  margin-left: 30px;
}

.menu, 
#copyright {
  opacity: 0.9;
}

.menu {
  transition: all .2s ease-in-out; 
}

.menu:hover {
  opacity: 1;
  transform: scale(1.1);
}

nav ul li a:hover {
  color: red;
}

footer img {
  width: 1rem;
  margin-left: 5px;
}

/* The following is related to the landing page */
#typedjs_container {
  margin: 0;
  text-align: center;
  min-height: 100vh;
  color: white;
  background-color: black;
  cursor: url("../images/down_arrow.png"), auto;
  
  display: flex;
  align-items: center;
  justify-content: center;
}

.typed-cursor {
  font-size: 3em;
  font-family: "Coco";
  letter-spacing: 10px;
  display: inline;
}

#coming_soon {
  white-space: nowrap;
  text-overflow: clip;
  overflow: hidden;
  opacity: 0;
  padding: 0;
  width: 10rem;
  margin: 0 auto;
}

#coming_soon.fade_in {
  opacity: 100;
  transition: opacity 2s;
}

/* Typedjs cursor makes the text seem off centered. This fixes that. */
#name_typed {
  margin-left: 15px;
}

/* The following is related to the main content */
#content {
  display: flex;
  margin: 0;
  padding: 0;
  min-height: 96vh;
  flex-direction: column;
  font-size: 17px;
}

/* The following is related to the work and blog content */
section {
  font-family: "GT Sectra Fine";
  font-size: 18px;
}
section header {
  text-align: center;
  min-height: 50vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.post_info h1 {
  font-size: 20px;
  font-weight: 500;
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
}

.post_info h2 {
  font-style: italic;
  font-weight: 400;
  font-size: 18px;
}

.work_list {
  font-size: 14px;
  font-weight: 100;
  text-align: center;
  justify-content: center;
  padding: 0;
  margin: 0 auto;
} 

.work_tools {
  margin: 0 10px;
}

@media only screen and (min-width: 480px) {
  .post_info h1 {
    font-size: 2.75vmin;
  }
  .post_info h2 {
    font-size: 2.65vmin;
  }
  .work_list {
    font-size: 1.75vmin;
  }
}

section article {
  font-weight: 100;
  text-align: left;
  margin-bottom: 120px;
}

section article p {
  line-height: 1.6em;
  width: 80%;
  max-width: 640px;
  margin: 1em auto;
}

section article p:first-of-type {
  margin-top: 40px;
}

section article p:last-of-type {
  margin-bottom: 40px;
}

section article ul {
  text-align: center;
  justify-content: center;
  flex-wrap: wrap;
  padding: 0;
  width: 80%;
  max-width: 640px;
  margin: 0 auto;
} 

section article ul li {
  margin: 5px 20px;
}

.post_image {
  display: flex;
  justify-content: center;
  height: auto;
  margin: 40px auto;
  margin-top: 80px;
}

.post_image img {
  height: auto;
  width: 95%;
  max-width: 950px;
}

section em a {
  color: black;
  text-decoration: none;
  border-bottom: 0em solid black;
  padding: 0 0.05em;
  line-height: 1em;
  -moz-box-shadow: inset 0 0px 0 black;
  -webkit-box-shadow: inset 0 0px 0 black;
  box-shadow: inset 0 0px 0 black;
  -moz-transition: all 300ms ease-in-out;
  -o-transition: all 300ms ease-in-out;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  color: black;
  border-bottom: 0em solid black;
  -moz-box-shadow: inset 0 -1px 0 black;
  -webkit-box-shadow: inset 0 -1px 0 black;
  box-shadow: inset 0 -1px 0 black;
}

section a:hover {
  color: white;
  -moz-box-shadow: inset 0 -1.1em 0 black;
  -webkit-box-shadow: inset 0 -1.1em 0 black;
  box-shadow: inset 0 -1.1em 0 black;
  -moz-transition-duration: 100ms;
  -o-transition-duration: 100ms;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

a.button {
  font-family: "Lemon Milk", "CustomY78";
  display: flex;
  align-items: center;
  justify-content: center;
  color: black;
  width: 140px;
  padding: 1em 1.2em;
  text-transform: uppercase;
  font-size: 14px;
  line-height: 1.2em;
}

/* The following style is related to the contact page */
#contact_div {
  font-size: 1.1em;
  min-height: inherit;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

#contact_heading {
  font-family: "Lemon Milk", "CustomY78";
  width: 50%;
  color: #FF0400;
}

#contact_heading p {
  font-family: "GT Sectra Fine";
  font-size: 1.3em;
  color: #000;
}

.contact_tiles {
	font-family: "GT Sectra Fine";
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  line-height: 1.6em;
  padding: 0;
}

.contact_tiles li {
	width: 300px;
	height: 300px;
	position: relative;
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;
	background: linear-gradient(45deg, #262a2b, #36dceab8);
	color: #fff;
	border: 2.5px solid #fff;
	margin: 4%;
}

.break {
	flex-basis: 100%;
	height: 0;
}

.contact_tiles li a {
	border: 1px solid #b7b7b7;
	padding: 5px 20px;
	border-radius: 3px;
	transition: all 0.3s ease-in-out;
	transform: translateY(-50%);
	opacity: 0;
	overflow: hidden;
	font-size: 16px;
}

.contact_tiles li a:before {
	content: '';
	position: absolute;
	height: 100%;
	width: 130%;
	background: #b7b7b7;
	top: 0;
	opacity: 0;
	left: -140px;
	border-radius: 0 20px 20px 0;
	z-index: -1;
	transition: all 0.3s ease-in-out;
}
.contact_tiles li:hover a {
	transform: translateY(-25%);
	opacity: 1;
}
.contact_tiles li a:hover {
	color: #262a2b;
}
.contact_tiles li a:hover:before {
	left: 0;
	opacity: 1;
}

.contact_tiles li:before {
	content: '';
	position: absolute;
	top: -2%;
	left: -2%;
	right: -2%;
	bottom: -2%;
	z-index: -1;
	background: #fff;
	transform: skew(2deg, 2deg);
}

.contact_tiles li:nth-child(1):before {
	background: #C9FFBF;
  background: -webkit-linear-gradient(to right, #FFAFBD, #C9FFBF);
  background: linear-gradient(to right, #FFAFBD, #C9FFBF);
}
.contact_tiles li:nth-child(2):before {
	background: #f2709c;
  background: -webkit-linear-gradient(to right, #ff9472, #f2709c);
  background: linear-gradient(to right, #ff9472, #f2709c);
}
.contact_tiles li:nth-child(3):before {
  background: #c21500;
  background: -webkit-linear-gradient(to right, #ffc500, #c21500);
  background: linear-gradient(to right, #ffc500, #c21500);
}
.contact_tiles li:nth-child(4):before {
	background: #FC354C;
  background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
  background: linear-gradient(to right, #0ABFBC, #FC354C);
}

/* The following is related to the about page */
#about_content {
  display: flex;
  align-items: center;
}

#find_me,
#about_content {
  margin: 0 2.5%;
  font-size: 4.7vw;
  font-family: "CustomY78";
  line-height: 0.8em;
}

#about_content div p,
#find_me p {
  margin: 3% 0;
}

#about_content span,
#find_me span {
  white-space: nowrap;
  text-overflow: clip;
  background: black;
  overflow: hidden;
  display: inline-block;
}

#name {
  max-width: 20vw;
}

#year {
  max-width: 30vw;
}

#passion {
  max-width: 58vw;
}

#interest {
  max-width: 70vw;
}

.red_text {
  color: red;
}

.red_text::selection {
  background-color: black;
}

.left_align {
  text-align: left;
}

.right_align {
  text-align: right;
}

